1.1.0 (2017/04/11)
==================

 - Added `consume()` function to retrieve all rows of a paginated query.