@@ -1,0 +1,1 @@
+from infusionsoft.contrib import django
