@@ -1,3 +1,11 @@
+UNRELEASED (TBA)
+================
+
+ - Include Django integration
+ - Switch to Werkzeug LocalProxy class (far simpler to understand)
+
+
+
 1.1.0 (2017/04/11)
 ==================
 
